--- a/SchoolBusWXWeb/SchoolBusWXWeb.csproj
+++ b/SchoolBusWXWeb/SchoolBusWXWeb.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="MQTTnet" Version="3.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Senparc.Weixin.MP" Version="16.7.9" />
     <PackageReference Include="Senparc.Weixin.MP.MVC" Version="7.2.13" />
   </ItemGroup>
