--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -5,6 +5,11 @@
     }
   },
   "SiteConfig": {
+    "DefaultConnection": "User ID=postgres;Password=liuzhe1314;Host=localhost;Port=5432;Database=coresample;Pooling=true;",
+    "AccessKey": "qklduvzdRpowzplc2sdUt6oOK2gy6y7vTwgd-6t8",
+    "SecretKey": "IvAlZlw3HYtZFVetRZMuj8_8zKCkb7XZUyHplJVO",
+    "Bucketfirst": "firstimg",
+    "Domain": "http://firstimg.360wll.cn/",
     "MqttOption": {
       "HostIp": "127.0.0.1",
       "HostPort": 1883,
@@ -128,6 +133,24 @@
       }
       //更多，任意数量、任意模块、任意组合...
     }
+  },
+  "HealthChecks-UI": {
+    "HealthChecks": [
+      {
+        "Name": "NpgServer-healthz",
+        "Uri": "https://localhost:5001/healthz"
+      }
+    ],
+    "Webhooks": [
+      {
+        "Name": "",
+        "Uri": "",
+        "Payload": "",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeOnSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   },
   "AllowedHosts": "*"
 }
