--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "SiteConfig": {
-    "DefaultConnection": "User ID=postgres;Password=liuzhe1314;Host=localhost;Port=5432;Database=coresample;Pooling=true;",
+    "DefaultConnection": "User ID=postgres;Password=liuzhe1314;Host=localhost;Port=5432;Database=SchoolBusPlatform;Pooling=true;",
     "AccessKey": "qklduvzdRpowzplc2sdUt6oOK2gy6y7vTwgd-6t8",
     "SecretKey": "IvAlZlw3HYtZFVetRZMuj8_8zKCkb7XZUyHplJVO",
     "Bucketfirst": "firstimg",
@@ -139,14 +139,6 @@
       {
         "Name": "NpgServer-healthz",
         "Uri": "https://localhost:5001/healthz"
-      }
-    ],
-    "Webhooks": [
-      {
-        "Name": "",
-        "Uri": "",
-        "Payload": "",
-        "RestoredPayload": ""
       }
     ],
     "EvaluationTimeOnSeconds": 10,
