--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -6,10 +6,12 @@
   },
   "SiteConfig": {
     "DefaultConnection": "User ID=postgres;Password=liuzhe1314;Host=localhost;Port=5432;Database=SchoolBusPlatform;Pooling=true;",
-    "AccessKey": "qklduvzdRpowzplc2sdUt6oOK2gy6y7vTwgd-6t8",
-    "SecretKey": "IvAlZlw3HYtZFVetRZMuj8_8zKCkb7XZUyHplJVO",
-    "Bucketfirst": "firstimg",
-    "Domain": "http://firstimg.360wll.cn/",
+    "QiniuOption": {
+      "AccessKey": "qklduvzdRpowzplc2sdUt6oOK2gy6y7vTwgd-6t8",
+      "SecretKey": "IvAlZlw3HYtZFVetRZMuj8_8zKCkb7XZUyHplJVO",
+      "Bucketfirst": "firstimg",
+      "Domain": "http://firstimg.360wll.cn/"
+    },
     "MqttOption": {
       "HostIp": "127.0.0.1",
       "HostPort": 1883,
@@ -18,7 +20,19 @@
       "Password": "psw001",
       "MqttTopic": "SpecialClient",
       "ClientID": "client001"
-    }
+    },
+    "AliOption": {
+      "RegionId": "cn-hangzhou",
+      "Product": "Dysmsapi",
+      "Domain": "dysmsapi.aliyuncs.com",
+      "Action": "SendSms",
+      "AccessKeyId": "LTAIaRZMdaL3RTIO",
+      "AccessKeySecret": "lemLqKcTrafC1slqfwbnPH4KsEMLmQ",
+      "SignName": "鲸卫士校车联盟",
+      "TemplateCode": "SMS_159773773",
+      "OutId": "yourOutId",
+      "Version": "2017-05-25"
+    } 
   },
   //以下信息会被自动识别，如无特殊说明，不用的参数可以删除，但修改 key 后将会无法自动识别！
   //CO2NET 设置
