--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -32,7 +32,10 @@
       "TemplateCode": "SMS_159773773",
       "OutId": "yourOutId",
       "Version": "2017-05-25"
-    } 
+    },
+    "WxShareOption": {
+      "URL": "http://www.iot-online.top"
+    }
   },
   //以下信息会被自动识别，如无特殊说明，不用的参数可以删除，但修改 key 后将会无法自动识别！
   //CO2NET 设置
