增加打卡日历

--- a/SchoolBusWXWeb/SchoolBusWXWeb.csproj
+++ b/SchoolBusWXWeb/SchoolBusWXWeb.csproj
@@ -19,6 +19,8 @@
     <None Include="wwwroot\lib\jquery\dist\jquery.js" />
     <None Include="wwwroot\lib\jquery\dist\jquery.min.js" />
     <None Include="wwwroot\lib\jquery\dist\jquery.min.map" />
+    <None Include="wwwroot\lib\laydate\laydate.js" />
+    <None Include="wwwroot\lib\laydate\theme\default\font\iconfont.svg" />
   </ItemGroup>
 
 
