--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "File": {
+      "LogLevel": {
+        "Default": "Error"
+      }
     }
   },
   "SiteConfig": {
