增加对matt消息处理

--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -35,8 +35,11 @@
       "OutId": "yourOutId",
       "Version": "2017-05-25"
     },
-    "WxShareOption": {
-      "URL": "http://www.iot-online.top"
+    "WxOption": {
+      "URL": "http://www.iot-online.top",
+      "TemplateId": "29k9rT1bjDwcVCjY14ABcBZnBl0jZttz3AlGOBLFF38",
+      "WXConfigName": "wxid",
+      "Domainnames": "http://www.iot-online.top/SchoolBusPlatform"
     }
   },
   //以下信息会被自动识别，如无特殊说明，不用的参数可以删除，但修改 key 后将会无法自动识别！
