--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -39,7 +39,7 @@
       "URL": "http://www.iot-online.top",
       "TemplateId": "29k9rT1bjDwcVCjY14ABcBZnBl0jZttz3AlGOBLFF38",
       "WXConfigName": "wxid",
-      "Domainnames": "http://www.iot-online.top/SchoolBusPlatform"
+      "Domainnames": "http://wx.360wll.cn"
     }
   },
   //以下信息会被自动识别，如无特殊说明，不用的参数可以删除，但修改 key 后将会无法自动识别！
