--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -37,8 +37,8 @@
     },
     "WxOption": {
       "URL": "http://www.iot-online.top",
-      "TemplateId": "29k9rT1bjDwcVCjY14ABcBZnBl0jZttz3AlGOBLFF38",
-      "WXConfigName": "wxid",
+      "TemplateId": "6RzeJPMnzoPv5AyWTx2ezAhDEyKmbidf4JspdBNT4Io",
+      "WXConfigName": "≤‚ ‘∏Ò Ω",
       "Domainnames": "http://wx.360wll.cn"
     }
   },
