--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -36,7 +36,7 @@
       "Version": "2017-05-25"
     },
     "WxOption": {
-      "URL": "http://www.iot-online.top",
+      "URL": "http://wx.360wll.cn",
       "TemplateId": "6RzeJPMnzoPv5AyWTx2ezAhDEyKmbidf4JspdBNT4Io",
       "WXConfigName": "≤‚ ‘∏Ò Ω",
       "Domainnames": "http://wx.360wll.cn"
