--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -20,10 +20,10 @@
   "SiteConfig": {
     "DefaultConnection": "User ID=postgres;Password=liuzhe1314;Host=localhost;Port=5432;Database=SchoolBusPlatform;Pooling=true;",
     "QiniuOption": {
-      "AccessKey": "qklduvzdRpowzplc2sdUt6oOK2gy6y7vTwgd-6t8",
-      "SecretKey": "IvAlZlw3HYtZFVetRZMuj8_8zKCkb7XZUyHplJVO",
-      "Bucketfirst": "firstimg",
-      "Domain": "http://firstimg.360wll.cn/"
+      "AccessKey": "",
+      "SecretKey": "",
+      "Bucketfirst": "",
+      "Domain": ""
     },
     "MqttOption": {
       "HostIp": "127.0.0.1",
@@ -35,22 +35,22 @@
       "ClientID": "client001"
     },
     "AliOption": {
-      "RegionId": "cn-hangzhou",
-      "Product": "Dysmsapi",
-      "Domain": "dysmsapi.aliyuncs.com",
-      "Action": "SendSms",
-      "AccessKeyId": "LTAIaRZMdaL3RTIO",
-      "AccessKeySecret": "lemLqKcTrafC1slqfwbnPH4KsEMLmQ",
-      "SignName": "鲸卫士校车联盟",
-      "TemplateCode": "SMS_159773773",
-      "OutId": "yourOutId",
-      "Version": "2017-05-25"
+      "RegionId": "",
+      "Product": "",
+      "Domain": "",
+      "Action": "",
+      "AccessKeyId": "",
+      "AccessKeySecret": "",
+      "SignName": "",
+      "TemplateCode": "",
+      "OutId": "",
+      "Version": ""
     },
     "WxOption": {
-      "URL": "http://wx.360wll.cn",
-      "TemplateId": "6RzeJPMnzoPv5AyWTx2ezAhDEyKmbidf4JspdBNT4Io",
-      "WXConfigName": "测试格式",
-      "Domainnames": "http://wx.360wll.cn"
+      "URL": "",
+      "TemplateId": "",
+      "WXConfigName": "",
+      "Domainnames": ""
     }
   },
   //以下信息会被自动识别，如无特殊说明，不用的参数可以删除，但修改 key 后将会无法自动识别！
