--- a/SchoolBusWXWeb/appsettings.json
+++ b/SchoolBusWXWeb/appsettings.json
@@ -1,19 +1,13 @@
 {
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     },
     "File": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Error"
       }
     }
   },
