--- a/SchoolBusWXWeb/SchoolBusWXWeb.csproj
+++ b/SchoolBusWXWeb/SchoolBusWXWeb.csproj
@@ -32,9 +32,8 @@
     <PackageReference Include="Metro.Logging.File.UI" Version="1.0.3" />
     <PackageReference Include="MQTTnet" Version="3.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Npgsql" Version="4.1.0-preview2" />
+    <PackageReference Include="Npgsql" Version="4.1.0" />
     <PackageReference Include="Qiniu.Shared" Version="7.2.15" />
-    <PackageReference Include="Senparc.Weixin" Version="6.6.0" />
     <PackageReference Include="Senparc.Weixin.MP" Version="16.9.0" />
     <PackageReference Include="Senparc.Weixin.MP.MVC" Version="7.4.0" />
   </ItemGroup>
